e2e-tests/tests/snapshots/postgres__table_source_12_3673_1911.snap
---
source: e2e-tests/tests/postgres.rs
expression: dump
---
layer: 0
  name: table_source
  version: 2
  extent: 4096
  feature: 0
    id: (none)
    geometry: POINT(884,1229)
    properties:
      gid = 19 (uint)
  feature: 1
    id: (none)
    geometry: POINT(837,1259)
    properties:
      gid = 20 (uint)
  feature: 2
    id: (none)
    geometry: POINT(881,1256)
    properties:
      gid = 21 (uint)
  feature: 3
    id: (none)
    geometry: POINT(887,1280)
    properties:
      gid = 22 (uint)
  feature: 4
    id: (none)
    geometry: POINT(867,1235)
    properties:
      gid = 23 (uint)
  feature: 5
    id: (none)
    geometry: POINT(866,1246)
    properties:
      gid = 24 (uint)
  feature: 6
    id: (none)
    geometry: POINT(861,1274)
    properties:
      gid = 25 (uint)
  feature: 7
    id: (none)
    geometry: POINT(840,1250)
    properties:
      gid = 26 (uint)
  feature: 8
    id: (none)
    geometry: POINT(842,1228)
    properties:
      gid = 27 (uint)
  feature: 9
    id: (none)
    geometry: POINT(888,1216)
    properties:
      gid = 28 (uint)
