e2e-tests/tests/snapshots/postgres__view_name_existing_two_schemas_dot_1_tilejson.snap
---
source: e2e-tests/tests/postgres.rs
expression: source_tilejson
---
{
  "bounds": [
    10.0,
    10.0,
    40.0,
    40.0
  ],
  "description": "schema_b.view_name_existing_two_schemas.b_geom",
  "name": "view_name_existing_two_schemas.1",
  "tilejson": "3.0.0",
  "tiles": [
    "http://[ADDR]/view_name_existing_two_schemas.1/{z}/{x}/{y}"
  ],
  "vector_layers": [
    {
      "fields": {
        "b_id": "int4",
        "b_info": "text"
      },
      "id": "view_name_existing_two_schemas.1"
    }
  ]
}
